--- a/GradingSystem/MainWindow.xaml
+++ b/GradingSystem/MainWindow.xaml
@@ -28,7 +28,8 @@
 
                 <Grid Grid.Column="0" Background="DarkGreen">
                     <ListView Margin="0 15">
-                        
+
+                        <!-- dashboard -->
                         <ListViewItem HorizontalAlignment="Center" Margin="0 0">
                             <Button Style="{StaticResource MaterialDesignFloatingActionButton}"
                                     HorizontalAlignment="Left" BorderBrush="{x:Null}" Background="{x:Null}"
@@ -38,7 +39,8 @@
                                 </StackPanel>
                             </Button>
                         </ListViewItem>
-                        
+
+                        <!-- Students -->
                         <ListViewItem HorizontalAlignment="Center" Margin="0 0">
                             <Button Style="{StaticResource MaterialDesignFloatingActionButton}"
             HorizontalAlignment="Left" BorderBrush="{x:Null}" Background="{x:Null}" Foreground="black" Click="managestudentBtn">
@@ -47,35 +49,60 @@
                                 </StackPanel>
                             </Button>
                         </ListViewItem>
+
+                        <!-- Grades -->
+                        <ListViewItem HorizontalAlignment="Center" Margin="0 0">
+                            <Button Style="{StaticResource MaterialDesignFloatingActionButton}"
+            HorizontalAlignment="Left" BorderBrush="{x:Null}" Background="{x:Null}" Foreground="black" Click="gradeBtn">
+                                <StackPanel Margin="-5">
+                                    <materialDesign:PackIcon Kind="CalculatorVariantOutline" Foreground="White"/>
+                                </StackPanel>
+                            </Button>
+                        </ListViewItem>
+
+                        <!-- Courses -->
+                        <ListViewItem HorizontalAlignment="Center" Margin="0 0">
+                            <Button Style="{StaticResource MaterialDesignFloatingActionButton}"
+HorizontalAlignment="Left" BorderBrush="{x:Null}" Background="{x:Null}" Foreground="black">
+                                <StackPanel Margin="-5">
+                                    <materialDesign:PackIcon Kind="FolderOutline" Foreground="White"/>
+                                </StackPanel>
+                            </Button>
+                        </ListViewItem>
+
+                        <!-- Subject -->
+                        <ListViewItem HorizontalAlignment="Center" Margin="0 0">
+                            <Button Style="{StaticResource MaterialDesignFloatingActionButton}"
+HorizontalAlignment="Left" BorderBrush="{x:Null}" Background="{x:Null}" Foreground="black">
+                                <StackPanel Margin="-5">
+                                    <materialDesign:PackIcon Kind="BookOutline" Foreground="White"/>
+                                </StackPanel>
+                            </Button>
+                        </ListViewItem>
+
+                        <!-- Users -->
+                        <ListViewItem HorizontalAlignment="Center" Margin="0 0">
+                            <Button Style="{StaticResource MaterialDesignFloatingActionButton}"
+HorizontalAlignment="Left" BorderBrush="{x:Null}" Background="{x:Null}" Foreground="black">
+                                <StackPanel Margin="-5">
+                                    <materialDesign:PackIcon Kind="UsersOutline" Foreground="White"/>
+                                </StackPanel>
+                            </Button>
+                        </ListViewItem>
+
+                        <!-- Grade Request -->
+                        <ListViewItem HorizontalAlignment="Center" Margin="0 0">
+                            <Button Style="{StaticResource MaterialDesignFloatingActionButton}"
+HorizontalAlignment="Left" BorderBrush="{x:Null}" Background="{x:Null}" Foreground="black">
+                                <StackPanel Margin="-5">
+                                    <materialDesign:PackIcon Kind="InboxesOutline" Foreground="White"/>
+                                </StackPanel>
+                            </Button>
+                        </ListViewItem>
                         
-                        <ListViewItem HorizontalAlignment="Center" Margin="0 0">
-                            <Button Style="{StaticResource MaterialDesignFloatingActionButton}"
-            HorizontalAlignment="Left" BorderBrush="{x:Null}" Background="{x:Null}" Foreground="black" Click="studentsBtn">
-                                <StackPanel Margin="-5">
-                                    <materialDesign:PackIcon Kind="SchoolOutline" Foreground="White"/>
-                                </StackPanel>
-                            </Button>
-                        </ListViewItem>
 
-                        <ListViewItem HorizontalAlignment="Center" Margin="0 0">
-                            <Button Style="{StaticResource MaterialDesignFloatingActionButton}"
-HorizontalAlignment="Left" BorderBrush="{x:Null}" Background="{x:Null}" Foreground="black">
-                                <StackPanel Margin="-5">
-                                    <materialDesign:PackIcon Kind="PaperOutline" Foreground="White"/>
-                                </StackPanel>
-                            </Button>
-                        </ListViewItem>
-
-                        <ListViewItem HorizontalAlignment="Center" Margin="0 0">
-                            <Button Style="{StaticResource MaterialDesignFloatingActionButton}"
-HorizontalAlignment="Left" BorderBrush="{x:Null}" Background="{x:Null}" Foreground="black">
-                                <StackPanel Margin="-5">
-                                    <materialDesign:PackIcon Kind="FaceMaleShimmerOutline" Foreground="White"/>
-                                </StackPanel>
-                            </Button>
-                        </ListViewItem>
-
-                        <ListViewItem HorizontalAlignment="Center" Margin="0 60 0 0">
+                        <!-- Logout -->
+                        <ListViewItem HorizontalAlignment="Center" Margin="0 0 0 0">
                             <Button Style="{StaticResource MaterialDesignFloatingActionButton}"
 HorizontalAlignment="Left" BorderBrush="{x:Null}" Background="{x:Null}" Foreground="black" Click="logoutBtn">
                                 <StackPanel Margin="-5">
