--- a/GradingSystem/View/Admin/ManageCourse.xaml
+++ b/GradingSystem/View/Admin/ManageCourse.xaml
@@ -1,19 +1,18 @@
-﻿<UserControl x:Class="GradingSystem.View.Admin.ManageStudents"
+﻿<UserControl x:Class="GradingSystem.View.Admin.ManageCourse"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:GradingSystem.View.Admin"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:viewModel="clr-namespace:GradingSystem.ViewModel"
+             xmlns:local="clr-namespace:GradingSystem.View.Admin"
              mc:Ignorable="d" 
              d:DesignHeight="600" d:DesignWidth="1106.25">
-
     <UserControl.DataContext>
         <!-- Set the DataContext to the StudentsViewModel -->
-        <viewModel:StudentsViewModel/>
+        <viewModel:CourseViewModel/>
     </UserControl.DataContext>
-    
+
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
@@ -23,9 +22,9 @@
         <!-- Dashboard Title -->
         <Grid Grid.Row="0" Margin="30 0 0 0">
             <TextBlock Text="Manage Students" 
-               FontSize="35"
-               Style="{StaticResource MaterialDesignCaptionTextBlock}" 
-               VerticalAlignment="Center"/>
+           FontSize="35"
+           Style="{StaticResource MaterialDesignCaptionTextBlock}" 
+           VerticalAlignment="Center"/>
         </Grid>
 
         <Grid Grid.Row="1">
@@ -59,11 +58,11 @@
 
                                         <Grid Grid.Column="0">
                                             <TextBox Style="{StaticResource searchBoxes}" Width="200"
-                                     Height="30">
+                                 Height="30">
                                             </TextBox>
                                         </Grid>
                                         <Grid Grid.Column="1">
-                                            <Button Style="{StaticResource MaterialDesignFlatDarkBgButton}" Width="100" Click="addStudentBtn">
+                                            <Button Style="{StaticResource MaterialDesignFlatDarkBgButton}" Width="100">
                                                 <StackPanel>
                                                     <materialDesign:PackIcon Kind="Add" Height="20"/>
                                                 </StackPanel>
@@ -76,8 +75,8 @@
 
                         <Grid Grid.Row="1" Height="auto">
                             <DataGrid x:Name="studentsDataGrid"
-                      CanUserSortColumns="False" CanUserReorderColumns="False" ItemsSource="{Binding Students}"
-                                      AutoGenerateColumns="False" SelectionMode="Single">
+                  CanUserSortColumns="False" CanUserReorderColumns="False" ItemsSource="{Binding Courses}"
+                                  AutoGenerateColumns="False" SelectionMode="Single">
 
                                 <!-- Define RowStyle to set background for all rows -->
                                 <DataGrid.RowStyle>
@@ -88,11 +87,8 @@
 
                                 <DataGrid.Columns>
 
-                                    <DataGridTextColumn Header="StudentID" IsReadOnly="True" CanUserResize="False" Width="*" Binding="{Binding StudentId}"/>
-                                    <DataGridTextColumn Header="Firstname" CanUserResize="False" Binding="{Binding FirstName}" IsReadOnly="True" Width="*"/>
-                                    <DataGridTextColumn Header="Lastname" CanUserResize="False" Binding="{Binding LastName}" IsReadOnly="True" Width="*"/>
-                                    <DataGridTextColumn Header="Course" CanUserResize="False" Binding="{Binding Course}" IsReadOnly="True" Width="*"/>
-                                    <DataGridTextColumn Header="Year Level" CanUserResize="False" Binding="{Binding YearLevel}" IsReadOnly="True" Width="*"/>
+                                    <DataGridTextColumn Header="CourseID" IsReadOnly="True" CanUserResize="False" Width="*" Binding="{Binding CourseId}"/>
+                                    <DataGridTextColumn Header="CourseName" CanUserResize="False" Binding="{Binding CourseName}" IsReadOnly="True" Width="*"/>
                                     <DataGridTextColumn Header="CreatedAt" CanUserResize="False" Binding="{Binding CreatedAt, StringFormat=dd/MM/yyyy hh:mm tt}" IsReadOnly="True" Width="*"/>
 
                                     <DataGridTemplateColumn Header="Action" CanUserResize="False" IsReadOnly="True" Width="auto" >
@@ -102,7 +98,7 @@
                                                     <Button Style="{StaticResource gridEditButton}">
                                                         <materialDesign:PackIcon Kind="PencilOutline" Style="{StaticResource gridButtonIcon}"/>
                                                     </Button>
-                                                    <Button Margin="5 0 0 0" Style="{StaticResource gridRemoveButton}" Click="deleteStudentBtn">
+                                                    <Button Margin="5 0 0 0" Style="{StaticResource gridRemoveButton}">
                                                         <materialDesign:PackIcon Kind="DeleteOutline" Style="{StaticResource gridButtonIcon}"/>
                                                     </Button>
                                                 </StackPanel>
