--- a/GradingSystem/View/Admin/ManageGrades.xaml
+++ b/GradingSystem/View/Admin/ManageGrades.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="GradingSystem.View.Admin.ManageStudents"
+﻿<UserControl x:Class="GradingSystem.View.Admin.ManageGrades"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -8,12 +8,11 @@
              xmlns:viewModel="clr-namespace:GradingSystem.ViewModel"
              mc:Ignorable="d" 
              d:DesignHeight="600" d:DesignWidth="1106.25">
-
     <UserControl.DataContext>
-        <!-- Set the DataContext to the StudentsViewModel -->
-        <viewModel:StudentsViewModel/>
+        <!-- Set the DataContext to the GradeViewModel -->
+        <viewModel:GradeViewModel />
     </UserControl.DataContext>
-    
+
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
@@ -22,10 +21,10 @@
 
         <!-- Dashboard Title -->
         <Grid Grid.Row="0" Margin="30 0 0 0">
-            <TextBlock Text="Manage Students" 
-               FontSize="35"
-               Style="{StaticResource MaterialDesignCaptionTextBlock}" 
-               VerticalAlignment="Center"/>
+            <TextBlock Text="Manage Grades" 
+           FontSize="35"
+           Style="{StaticResource MaterialDesignCaptionTextBlock}" 
+           VerticalAlignment="Center"/>
         </Grid>
 
         <Grid Grid.Row="1">
@@ -58,12 +57,12 @@
                                         </Grid.ColumnDefinitions>
 
                                         <Grid Grid.Column="0">
-                                            <TextBox Style="{StaticResource searchBoxes}" Width="200"
-                                     Height="30">
+                                            <TextBox Style="{StaticResource MaterialDesignTextBox}" Width="200"
+                                 Height="40">
                                             </TextBox>
                                         </Grid>
                                         <Grid Grid.Column="1">
-                                            <Button Style="{StaticResource MaterialDesignFlatDarkBgButton}" Width="100" Click="addStudentBtn">
+                                            <Button Style="{StaticResource MaterialDesignFlatDarkBgButton}" Width="100">
                                                 <StackPanel>
                                                     <materialDesign:PackIcon Kind="Add" Height="20"/>
                                                 </StackPanel>
@@ -76,8 +75,8 @@
 
                         <Grid Grid.Row="1" Height="auto">
                             <DataGrid x:Name="studentsDataGrid"
-                      CanUserSortColumns="False" CanUserReorderColumns="False" ItemsSource="{Binding Students}"
-                                      AutoGenerateColumns="False" SelectionMode="Single">
+                  CanUserSortColumns="False" CanUserReorderColumns="False" ItemsSource="{Binding Grades}"
+                                  AutoGenerateColumns="False" SelectionMode="Single">
 
                                 <!-- Define RowStyle to set background for all rows -->
                                 <DataGrid.RowStyle>
@@ -88,11 +87,10 @@
 
                                 <DataGrid.Columns>
 
-                                    <DataGridTextColumn Header="StudentID" IsReadOnly="True" CanUserResize="False" Width="*" Binding="{Binding StudentId}"/>
-                                    <DataGridTextColumn Header="Firstname" CanUserResize="False" Binding="{Binding FirstName}" IsReadOnly="True" Width="*"/>
-                                    <DataGridTextColumn Header="Lastname" CanUserResize="False" Binding="{Binding LastName}" IsReadOnly="True" Width="*"/>
+                                    <DataGridTextColumn Header="GradeID" IsReadOnly="True" CanUserResize="False" Width="*" Binding="{Binding GradeId}"/>
+                                    <DataGridTextColumn Header="StudentName" CanUserResize="False" Binding="{Binding FirstName}" IsReadOnly="True" Width="*"/>
                                     <DataGridTextColumn Header="Course" CanUserResize="False" Binding="{Binding Course}" IsReadOnly="True" Width="*"/>
-                                    <DataGridTextColumn Header="Year Level" CanUserResize="False" Binding="{Binding YearLevel}" IsReadOnly="True" Width="*"/>
+                                    <DataGridTextColumn Header="DateSubmitted" CanUserResize="False" Binding="{Binding DateSubmitted, StringFormat=dd/MM/yyyy hh:mm tt}" IsReadOnly="True" Width="*"/>
                                     <DataGridTextColumn Header="CreatedAt" CanUserResize="False" Binding="{Binding CreatedAt, StringFormat=dd/MM/yyyy hh:mm tt}" IsReadOnly="True" Width="*"/>
 
                                     <DataGridTemplateColumn Header="Action" CanUserResize="False" IsReadOnly="True" Width="auto" >
@@ -102,14 +100,13 @@
                                                     <Button Style="{StaticResource gridEditButton}">
                                                         <materialDesign:PackIcon Kind="PencilOutline" Style="{StaticResource gridButtonIcon}"/>
                                                     </Button>
-                                                    <Button Margin="5 0 0 0" Style="{StaticResource gridRemoveButton}" Click="deleteStudentBtn">
+                                                    <Button Margin="5 0 0 0" Style="{StaticResource gridRemoveButton}">
                                                         <materialDesign:PackIcon Kind="DeleteOutline" Style="{StaticResource gridButtonIcon}"/>
                                                     </Button>
                                                 </StackPanel>
                                             </DataTemplate>
                                         </DataGridTemplateColumn.CellTemplate>
                                     </DataGridTemplateColumn>
-
                                 </DataGrid.Columns>
 
                             </DataGrid>
